se comprimen imagenes

--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active " data-bs-interval="5000">
-                <img src="./images/viandas-deli.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid" alt="...">
+                <img src="./images/viandas-deli-min.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Viandas Saludables</h5>
                   <p>Elegí el menú que más se adapte a tus objetivos.</p>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="5000">
-                <img src="./images/viandas2.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid" alt="...">
+                <img src="./images/viandas2-min.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Hacé tu pedido</h5>
                   <p>Podés hacer tu pedido completando el formulario de contacto</p>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="5000">
-                <img src="./images/viandas3.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid" alt="...">
+                <img src="./images/viandas3-min.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Hora de disfrutar!</h5>
                   <p>Es momento de disfrutar de comida saludable y deliciosa!</p>
@@ -136,23 +136,23 @@
         <div id="planesImg">
             <div class="img-plan">
                 <h3 class="planTitle">Fit</h3>
-                <img src="../images/menuFit.jpg" width="300px" margin="10px">
+                <img src="../images/menuFit-min.jpg" width="300px" margin="10px">
                 <button class="button-pedidoPlan">Hacer Pedido</button>
             </div>
             
             <div class="img-plan">
                 <h3 class="planTitle">Keto</h3>
-                <img src="../images/menuKeto.jpg" width="300px">
+                <img src="../images/menuKeto-min.jpg" width="300px">
                 <button class="button-pedidoPlan">Hacer Pedido</button>
             </div>
             <div class="img-plan">
                 <h3 class="planTitle">Bajas calorías</h3>
-                <img src="../images/menuBC.jpg" width="300px">
+                <img src="../images/menuBC-min.jpg" width="300px">
                 <button class="button-pedidoPlan">Hacer Pedido</button>
             </div>
             <div class="img-plan">
                 <h3 class="planTitle">Gourmet</h3>
-                <img src="../images/menuGourmet.jpg" width="300px" height= "424px">
+                <img src="../images/menuGourmet-min.jpg" width="300px" height= "424px">
                 <button class="button-pedidoPlan">Hacer Pedido</button>
             </div>
         </div>
