--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <nav id="nav-div">
         <ul class="nav">
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="planes.html">Planes</a>
+            <li><a href="/views/planes.html">Planes</a>
                 <ul id="submenu">
                     <li><a href="views/fit.html">Fit Plan</a></li>
                     <li><a href="views/keto.html">Keto</a></li>
-                    <li><a href="#">Bajas calorias</a></li>
-                    <li><a href="#">Gourmet</a></li>
+                    <li><a href="views/bc.html">Bajas calorias</a></li>
+                    <li><a href="views/gourmet.html">Gourmet</a></li>
                 </ul>
             </li>
             <li><a href="#servicio-seccion">Servicios</a></li>
@@ -117,11 +117,11 @@
             </button>
         </div>
         <div class="hacer-pedidoDiv">
-            <button id="button-pedido">Hacer Pedido</button>
+            <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
         </div>
     </div>
     <section>
-        <div class="banner--bannerSecundary">
+        <div class="banner">
             <p>Deli Rose</p>
         </div>
     </section>
@@ -193,30 +193,30 @@
             <div class="img-plan">
                 <h3 class="planTitle">Fit</h3>
                 <img src="../images/menuFit-min.jpg" width="300px" margin="10px">
-                <div class="bu">
-                    <button class="button-pedidoPlan">Hacer Pedido</button>
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
                 </div>
             </div>
 
             <div class="img-plan">
                 <h3 class="planTitle">Keto</h3>
                 <img src="../images/menuKeto-min.jpg" width="300px">
-                <div>
-                    <button class="button-pedidoPlan">Hacer Pedido</button>
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
                 </div>
             </div>
             <div class="img-plan">
                 <h3 class="planTitle">Bajas calorías</h3>
                 <img src="../images/menuBC-min.jpg" width="300px">
-                <div>
-                    <button class="button-pedidoPlan">Hacer Pedido</button>
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
                 </div>
             </div>
             <div class="img-plan">
                 <h3 class="planTitle">Gourmet</h3>
                 <img src="../images/menuGourmet-min.jpg" width="300px" height="424px">
-                <div>
-                    <button class="button-pedidoPlan">Hacer Pedido</button>
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
                 </div>
             </div>
         </div>
@@ -347,7 +347,7 @@
         <img src="/images/logo.jpg" id="logo-transform">
     </div>
         -->
-    <footer class="footer--color">
+    <footer class="footer">
         <h4>Seguinos en las redes!</h4>
         <div id="imgFooter">
             <a href="https://www.facebook.com/deliroseviandas/"> <img class="img-foot"
