--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <!--Formulario de contacto-->
 
     <section class="contacto-imagen" id="contacto-formulario">
-        <h2 class="h2-style">Contacto</h2>
+        <h2 class="h2-style">Contacto / Hacé tu pedido</h2>
         <div class="seccionContacto--contactoDos">
             <!--camelCase-->
 
