--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <header class="header--light">
         <div class="logo-h">
-            <img src="../images/logo.jpg" height="100px">
+            <img src="images/logo.JPG" height="100px">
             <h1 style="font-family: 'Lobster', cursive;">Viandas Saludables</h1>
         </div>
     </header>
@@ -81,7 +81,7 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active " data-bs-interval="5000">
-                    <img src="./images/viandas-deli-min.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid"
+                    <img src="images/viandas-deli-min.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid"
                         alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Viandas Saludables</h5>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="5000">
-                    <img src="./images/viandas2-min.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid"
+                    <img src="images/viandas2-min.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid"
                         alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Hacé tu pedido</h5>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="5000">
-                    <img src="./images/viandas3-min.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid"
+                    <img src="images/viandas3-min.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid"
                         alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Hora de disfrutar!</h5>
@@ -285,6 +285,24 @@
         </div>
     </section>
 
+
+    <footer class="footer">
+        <h4>Seguinos en las redes!</h4>
+        <div id="imgFooter">
+            <a href="https://www.facebook.com/deliroseviandas/"> <img class="img-foot"
+                    src="../images/facebook_icon_194147.png" alt="facebook"></a>
+            <a href="https://www.instagram.com/deliroseviandas/?hl=es"><img class="img-foot"
+                    src="../images/instagram_icon_194148.png" alt="instagram"></a>
+            <a href="https://wa.me/message/TJHQUCND5T5QL1"><img class="img-foot"
+                    src="../images/whatsapp_icon_194157.png" alt="whatsapp"></a>
+        </div>
+        <h3>Deli Rose Viandas</h3>
+    </footer>
+</body>
+
+</html>
+
+
     <!--Ejemplo de uso de Grid-->
     <!--
 <section class="grid-layout">
@@ -347,18 +365,3 @@
         <img src="/images/logo.jpg" id="logo-transform">
     </div>
         -->
-    <footer class="footer">
-        <h4>Seguinos en las redes!</h4>
-        <div id="imgFooter">
-            <a href="https://www.facebook.com/deliroseviandas/"> <img class="img-foot"
-                    src="../images/facebook_icon_194147.png" alt="facebook"></a>
-            <a href="https://www.instagram.com/deliroseviandas/?hl=es"><img class="img-foot"
-                    src="../images/instagram_icon_194148.png" alt="instagram"></a>
-            <a href="https://wa.me/message/TJHQUCND5T5QL1"><img class="img-foot"
-                    src="../images/whatsapp_icon_194157.png" alt="whatsapp"></a>
-        </div>
-        <h3>Deli Rose Viandas</h3>
-    </footer>
-</body>
-
-</html>
