--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <header class="header--light">
         <div class="logo-h">
-            <img src="images/logo.JPG" height="100px">
+            <img src="images/logo.jpg" height="100px">
             <h1 style="font-family: 'Lobster', cursive;">Viandas Saludables</h1>
         </div>
     </header>
@@ -132,7 +132,7 @@
         <h2 id="h-us">Nuestra Historia</h2>
         <div class="section-us">
             <div class="us-div-imagen">
-                <img src="../images/palta.jpg" id="us-img">
+                <img src="images/palta.jpg" id="us-img">
             </div>
             <p class="p-us">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur,
                 tenetur at delectus quia maiores ipsum, dolorem, praesentium modi ducimus ex iste repellendus error
@@ -177,7 +177,7 @@
                 natus numquam quibusdam.
             </p>
             <div class="us-div-imagen">
-                <img src="../images/salad3.jpg" style="width: 450px;">
+                <img src="images/salad3.jpg" style="width: 450px;">
             </div>
         </div>
     </section>
@@ -192,7 +192,7 @@
         <div id="planesImg">
             <div class="img-plan">
                 <h3 class="planTitle">Fit</h3>
-                <img src="../images/menuFit-min.jpg" width="300px" margin="10px">
+                <img src="images/menuFit-min.jpg" width="300px" margin="10px">
                 <div class="btn-planes">
                     <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
                 </div>
@@ -200,21 +200,21 @@
 
             <div class="img-plan">
                 <h3 class="planTitle">Keto</h3>
-                <img src="../images/menuKeto-min.jpg" width="300px">
+                <img src="images/menuKeto-min.jpg" width="300px">
                 <div class="btn-planes">
                     <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
                 </div>
             </div>
             <div class="img-plan">
                 <h3 class="planTitle">Bajas calorías</h3>
-                <img src="../images/menuBC-min.jpg" width="300px">
+                <img src="images/menuBC-min.jpg" width="300px">
                 <div class="btn-planes">
                     <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
                 </div>
             </div>
             <div class="img-plan">
                 <h3 class="planTitle">Gourmet</h3>
-                <img src="../images/menuGourmet-min.jpg" width="300px" height="424px">
+                <img src="images/menuGourmet-min.jpg" width="300px" height="424px">
                 <div class="btn-planes">
                     <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
                 </div>
@@ -224,7 +224,7 @@
     </section>
     <div class="pancake-div" <>
         <h2 class="h2-style" style="text-align: center; font-size: 30px;">Pancakes Proteicos</h2>
-        <video id="video-prueba" src="../images/delirose.mp4" width="640" height="480" controls autoplay muted></video>
+        <video id="video-prueba" src="images/delirose.mp4" width="640" height="480" controls autoplay muted></video>
     </div>
 
     <!--Formulario de contacto-->
@@ -290,11 +290,11 @@
         <h4>Seguinos en las redes!</h4>
         <div id="imgFooter">
             <a href="https://www.facebook.com/deliroseviandas/"> <img class="img-foot"
-                    src="../images/facebook_icon_194147.png" alt="facebook"></a>
+                    src="images/facebook_icon_194147.png" alt="facebook"></a>
             <a href="https://www.instagram.com/deliroseviandas/?hl=es"><img class="img-foot"
-                    src="../images/instagram_icon_194148.png" alt="instagram"></a>
+                    src="images/instagram_icon_194148.png" alt="instagram"></a>
             <a href="https://wa.me/message/TJHQUCND5T5QL1"><img class="img-foot"
-                    src="../images/whatsapp_icon_194157.png" alt="whatsapp"></a>
+                    src="images/whatsapp_icon_194157.png" alt="whatsapp"></a>
         </div>
         <h3>Deli Rose Viandas</h3>
     </footer>
