--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <li><a href="#contacto-formulario">Contacto</a></li>
         </ul>
     </nav>
-
-    <div class="collapse" id="navbarToggleExternalContent">
+    
+    <!--    <div class="collapse" id="navbarToggleExternalContent">
         <div class="bg-secondary p-4">
             <h5 class="text-white h4">Collapsed content</h5>
             <span class="text-muted">Toggleable via the navbar brand.</span>
@@ -65,6 +65,7 @@
             </button>
         </div>
     </nav>
+        -->
 
 
     <!--Banner y botón para hacer pedido-->
